# secure-aid-back

./: README.md  docker-compose.yml  manage.py  pyproject.toml  quick.py  requirements.txt  requirments.txt
auth_api/: api.py  jwt.py  models.py  schemas.py  va_gov.py  views.py
auth_app/: api.py  provider.py
birthday_app/: apps.py  urls.py  views.py
birthday_app/templates/birthday_app/: dashboard.html  home.html
chat_api/: consumers.py  models.py  routing.py
chat_api/migrations/: 0001_initial.py  0002_message_room_alter_message_author.py  0003_alter_message_room.py
core/: api.py  settings.py  urls.py
docs/: schema.txt
fa_config/config/: fusionauth.properties
passwordless_api/: api.py  apps.py  models.py
profile_api/: models.py
secure-aid-backend-main/: requirments.txt
secure-aid-backend-main/auth_api/: api.py  jwt.py
secure-aid-backend-main/chat_api/: consumers.py
secure-aid-backend-main/core/: asgi.py  urls.py
secure-aid-backend-main/passwordless_api/migrations/: 0001_initial.py  0002_delete_referral.py
secure-aid-backend-main/ticket_api/: admin.py  views.py
secure-aid-backend-main/ticket_api/migrations/: 0001_initial.py  0002_ticket_sponsor_id.py
secure-aid-backend-main/user_api/: admin.py
secure_aid_backend/: asgi.py  settings.py  urls.py  wsgi.py
software/codePlatoon/secureAID/project/: settings.py
ticket_api/: models.py  serializers.py  urls.py  views.py
user_api/: api.py  models.py
user_api/migrations/: 0001_initial.py
